Consolidate application settings and runtime packaging